# cmis-collision-avoidance

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/: README.md  api-draft.md  design-overview.md  repository-architecture.md  source-file-policy.md
docs/algorithms/: README.md  cnav.md  orca.md
docs/architecture/: api.md  orca-reproduction-roadmap.md  overview.md  repository-structure.md  visualization-design.md
docs/issues/: 0001-python-bootstrap.md  0002-orca-boundary-definition.md  0003-poetry-environment-migration.md  0004-core-reference-types-and-tests.md  0005-core-neighbor-search-reference-implementation.md  0006-core-linear-solver-port.md  0007-orca-constraint-generation.md  0008-orca-step-integration.md  0009-scenario-schema-and-loader.md  0010-upstream-circle-scenario-regression.md  0011-pytest-test-suite-migration.md  0012-orca-goal-model-and-pref-velocity-alignment.md  0013-orca-agent-and-simulator-parity-audit.md  0014-orca-obstacle-topology-model-port.md  0015-orca-obstacle-constraint-exact-port.md  0016-orca-agent-constraint-and-solver-parity.md  0017-orca-upstream-regression-suite-expansion.md  0018-orca-parity-gap-review.md  0019-orca-neighbor-search-parity-audit.md  0020-orca-roadmap-regression-support.md  0021-fast-simulation-visualization.md  0022-cnav-initial-implementation.md  0023-cnav-orca-per-agent-solve-helper.md  0024-cnav-action-model-and-intent-cache.md  0025-cnav-coordination-evaluation.md  0026-cnav-cli-scenarios-tests-and-spec.md  0027-cnav-my-style-validation.md  0028-cnav-my-style-baseline-audit.md  0029-cnav-validation-scenarios.md  0030-cnav-trace-parity-harness.md  0031-cnav-legacy-parity-gap-review.md  0032-cnav-parity-fixes-and-spec-sync.md  0033-cnav-mystyle-direct-port-scenarios.md  0034-cnav-legacy-cpp-trace-export-and-diff.md  0035-cnav-forpaper-guidance-port.md  0036-cnav-legacy-decision-profile.md  README.md
docs/policies/: documentation-sync-policy.md  (+1 more)
examples/: CMakeLists.txt  minimal_cli.cpp
scenarios/: cnav_crossing_validation.yaml  cnav_crowd_forpaper_direct_port.yaml  cnav_forpaper_direct_port.yaml  cnav_head_on_validation.yaml  cnav_obstacle_validation.yaml  cnav_queue.yaml  cnav_queue_validation.yaml  head_on.yaml  obstacle_demo.yaml  upstream_circle.yaml
scripts/: compare_cnav_trace_jsonl.py  compare_upstream_blocks.py  compare_upstream_circle.py  compare_upstream_roadmap.py  dump_cnav_legacy_trace.py  dump_cnav_trace.py  smoke_run.py
src/: CMakeLists.txt  simulator.cpp
src/cmis_ca/: __init__.py
src/cmis_ca/algorithms/: __init__.py  base.py  registry.py
src/cmis_ca/algorithms/cnav/: __init__.py  actions.py  algorithm.py  coordination.py  parameters.py  trace.py
src/cmis_ca/algorithms/orca/: __init__.py  agent_solver.py  algorithm.py  constraints.py  parameters.py
src/cmis_ca/cli/: __init__.py  main.py  run.py  visualize.py
src/cmis_ca/core/: __init__.py  agent.py  constraints.py  geometry.py  navigation.py  neighbor_search.py  scenario.py  simulation.py  solver.py  state.py  world.py
src/cmis_ca/io/: __init__.py  scenario_loader.py
src/cmis_ca/regression/: __init__.py  upstream_blocks.py  upstream_circle.py  upstream_roadmap.py
src/cmis_ca/visualization/: __init__.py  models.py  pyqtgraph_viewer.py  trace_builder.py
tests/: CMakeLists.txt  __init__.py  smoke_test.cpp  test_simulator_smoke.py
(+38 files in other folders)
