[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cmis-collision-avoidance"
version = "0.1.0"
description = "Laboratory-oriented collision avoidance research codebase."
authors = ["CMIS Laboratory"]
readme = "README.md"
license = "Apache-2.0"
packages = [{ include = "cmis_ca", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"
ruff = ">=0.6"

[tool.poetry.scripts]
cmis-ca = "cmis_ca.cli.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]
target-version = "py39"
